closes #186 for now

--- a/app/assets/sass/_dynamic_menus.sass
+++ b/app/assets/sass/_dynamic_menus.sass
@@ -320,3 +320,9 @@
   display: block
 #menu_bookmark header .close
   top: 15px
+  
+#menu_version td.audio
+  background: 
+    image: url(../images/icon_listen.png) 
+    repeat: no-repeat 
+    position: 95% -40px
