--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -38,7 +38,7 @@
           %input.verses_selected_input{name:'verses', type: 'hidden', value: ''}
     %ul.float_right
       %li.show_in_parallel_mode
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_alt_version', :title => t("ref.choose version")}
+        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_alt_version', :title => t("ref.choose second version")}
           %b
             = @alt_reference.version_string
           %span
