--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -80,9 +80,9 @@
   background:
     image: url(../images/nav_group.png)
 
-#nav_primary_groups a span
+#nav_primary_live a span
   background:
-    image: url(../images/nav_group.png)
+    image: url(../images/nav_live.png)
 
 #nav_primary_mobile a span
   background:
