--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -17,7 +17,7 @@
     %a{:href => terms_path}=t("terms")
     %span.separator
       |
-    %a{:href => 'press_path'}=t("press")
+    %a{:href => press_path}=t("press")
     %span.separator
       |
     %a{:href => 'http://support.youversion.com'}=t("support")
