--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -27,6 +27,11 @@
           %span &nbsp;
         .tooltip{style: "display: none;"}
           %span=t("friends")
+      %li#nav_primary_live
+        %a{:href => 'http://www.youversion.com/live'}
+          %span &nbsp;
+        .tooltip{style: "display: none;"}
+          %span=t("live")
       %li#nav_primary_mobile
         %a{:href => '/mobile'}
           %span &nbsp;
