--- a/app/views/notes/_list_item.html.haml
+++ b/app/views/notes/_list_item.html.haml
@@ -5,7 +5,7 @@
         %img.avatar_large{src: list_item.user_avatar_url.px_48x48}
   %div{style: ("margin-left: 60px;" if display == :avatar)}
     %h5{class: list_item.user_status}
-      %a{href: note_path(list_item.id), class: ("highlight" if list_item.highlight_color), style: ("background-color: ##{list_item.highlight_color}" if list_item.highlight_color)}= list_item.title
+      %a{href: note_path(list_item.id), class: (is_dark?(list_item.highlight_color) ? "dark_highlight" : "highlight" if list_item.highlight_color), style: ("background-color: ##{list_item.highlight_color}" if list_item.highlight_color)}= list_item.title
     - if display == :avatar
       %p.mute.small.negative_gutter_top_half
         %a{href: user_path(list_item.username)}= list_item.username
