--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -3,7 +3,7 @@
     - unless @page.to_i == 1
       %li.pagination_previous
         =link_to t("previous page"), params.merge({page: @page-1})
-    %li.pagination_pages= "#{((@page.to_i - 1)*resource_list.page_length) + 1}&ndash;#{@page.to_i * resource_list.page_length} of #{resource_list.total}".html_safe
+    %li.pagination_pages= t("paginated items shown", first_shown: number_with_delimiter(((@page.to_i - 1)*resource_list.page_length) + 1), last_shown: number_with_delimiter(@page.to_i * resource_list.page_length), total_available: number_to_human(resource_list.total, precision: 3)).html_safe
     - unless @page.to_i == resource_list.total_pages
       %li.pagination_next
         =link_to t("next page"), params.merge({page: @page+1})
