added pagination to bookmark labels, closes #129
Change-Id: I38eedb496c558bd0127fd26065a17b947bdee278

--- a/app/assets/sass/_pagination.sass
+++ b/app/assets/sass/_pagination.sass
@@ -98,3 +98,11 @@
 #main .pagination_last a:hover
   background:
     position: -75px -25px
+
+#main .pagination.labels
+  float: right
+  border-top: none
+  margin: 0
+  padding: 0
+  .pagination_pages
+    line-height: 25px
