--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -47,6 +47,7 @@
 .split_pane_sidebar dt
   font-weight: bold
   padding-bottom: 15px
+  line-height: 25px
 
 .split_pane_sidebar dd
   font-size: 13px
