added bio, fixed profile URL bug, made profile url showing slicker

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -210,6 +210,10 @@
   background:
     image: url(../images/icon_small_link.png)
 
+.icon_small_about
+  background:
+    image: url(../images/icon_small_about.png)
+
 // `Main > Footers
 //----------------------------------------------------------------------------------------------------
 
