--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -13,7 +13,7 @@
         - if user.location
           %li.icon_small_location= user.location
         - if user.website
-          %li.icon_small_link= link_to user.website_human, url_for(user.website_url)
+          %li.icon_small_link= link_to user.website_human, user.website_url
         - if user.bio
           %li.icon_small_about= user.bio
       
