--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -21,9 +21,10 @@
     %span.separator
       |
     %a{:href => 'http://support.youversion.com'}=t("support")
-    %span.separator
-      |
-    %a{:href => donate_path}=t("donate title")
+    - unless [:es, :pt, :pt_PT, :pt_BR].include? I18n.locale
+      %span.separator
+        |
+      %a{:href => donate_path}=t("donate title")
   %p.float_right
     %label{:for => 'choose_language'}
       =t("choose language field")
@@ -32,5 +33,7 @@
       %span
         %select{:id => 'choose_language', :name => 'choose_language'}
           - I18n.available_locales.each do |loc|
-            -#%option{value: url_for(params.merge({locale: loc})), selected: loc == I18n.locale}= t("language name", locale: loc)
-            %option{value: l10n_path, selected: loc == I18n.locale}= t("language name", locale: loc)
+            - url = url_for(params.merge(locale: loc))
+            - url = "/#{loc}" + url_for(params.merge({locale: loc, only_path:true})) if loc == I18n.default_locale #default locale is ommited (routing-filter gem) for overall convenience, but removes /<default locale> from url_for path, so we must add it explicitly here.
+            %option{value: url, selected: loc == I18n.locale}= t("language name", locale: loc)
+            -#%option{value: l10n_path, selected: loc == I18n.locale}= t("language name", locale: loc)
