--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,8 @@
 %article
   %h1= t("users.sign up for an account")
-  -if params[:source]
+  -if @blurb
     %hr
-    %p= t("registration.#{params[:source]} blurb")
+    %p= @blurb
     %hr
   %p= link_to "Sign up with Facebook", auth_connect_path(:facebook, redirect: facebook_sign_up_path), class: "action_button_blue"
   = render 'create_form'
