--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
       -# = render '/shared/menu_book_chapter'
       = render_cell :book_selector, :display, {reference: @reference, version: @version}
       -# = render '/shared/menu_version'
-      = render_cell :version_selector, :display, {reference: @reference, alt_reference: @alt_reference, version: @version}
+      = render_cell :version_selector, :display, {reference: @reference, alt_reference: @alt_reference, version: @version, recent_versions: recent_versions}
       = render '/shared/menu_bookmark'
       = render '/shared/menu_settings'
       = render '/shared/menu_audio_player'
