added changing email
Change-Id: Iaaff383754761919cf2f4e9d4d26b2b91b7e761b

--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -1,4 +1,5 @@
 - links = [{path: profile_path, string: t('users.edit profile')},
+           {path: update_email_path, string: t('users.update email button')},
            {path: password_path, string: t('users.edit password')},
            {path: picture_path, string: t('users.edit picture')},
            {path: notifications_path, string: t('users.edit notifications')},
