--- a/app/views/users/_sidebar.html.haml
+++ b/app/views/users/_sidebar.html.haml
@@ -1,4 +1,5 @@
 - links = [{path: profile_path, string: t('users.edit profile')},
+           {path: update_email_path, string: t('users.update email button')},
            {path: password_path, string: t('users.change password')},
            {path: picture_path, string: t('users.picture')},
            {path: notifications_path, string: t('users.manage notifications')},
