audio icon fixed

--- a/app/assets/sass/_dynamic_menus.sass
+++ b/app/assets/sass/_dynamic_menus.sass
@@ -320,9 +320,12 @@
   display: block
 #menu_bookmark header .close
   top: 15px
+
+.dynamic_menu.version_select
+  width: 415px
   
-#menu_version td.audio
+#menu_version td.audio a div
   background: 
     image: url(../images/icon_listen.png) 
     repeat: no-repeat 
-    position: 95% -40px
+    position: 100% -46px
