font settings imported to embedded reader

--- a/app/assets/sass/_user_settings.sass
+++ b/app/assets/sass/_user_settings.sass
@@ -2,35 +2,35 @@
 //----------------------------------------------------------------------------------------------------
 
 .user_setting_font_helvetica,
-article[data-setting-font="user_setting_font_helvetica"]
+*[data-setting-font="user_setting_font_helvetica"]
   font-family: $body_font
 
 .user_setting_font_georgia,
-article[data-setting-font="user_setting_font_georgia"]
+*[data-setting-font="user_setting_font_georgia"]
   font-family: Georgia, 'Times New Roman', Times, serif
 
 .user_setting_font_baskerville,
-article[data-setting-font="user_setting_font_baskerville"]
+*[data-setting-font="user_setting_font_baskerville"]
   font-family: Baskerville, 'Times New Roman', Times, serif
   -webkit-font-smoothing: subpixel-antialiased
 
 .user_setting_font_verdana,
-article[data-setting-font="user_setting_font_verdana"]
+*[data-setting-font="user_setting_font_verdana"]
   font-family: Verdana, sans-serif
 
 // `Text Size
 //----------------------------------------------------------------------------------------------------
 
 .user_setting_size_small,
-article[data-setting-size="user_setting_size_small"]
+*[data-setting-size="user_setting_size_small"]
   font-size: $text_size
 
 .user_setting_size_medium,
-article[data-setting-size="user_setting_size_medium"]
+*[data-setting-size="user_setting_size_medium"]
   font-size: 17px
 
 .user_setting_size_large,
-article[data-setting-size="user_setting_size_large"]
+*[data-setting-size="user_setting_size_large"]
   font-size: 20px
 
 // `Dynamic Menu
