--- a/app/views/plans/_pane_devotional.html.haml
+++ b/app/views/plans/_pane_devotional.html.haml
@@ -13,7 +13,7 @@
           - if @content_page == i
             %span{style: "position: absolute; left: 325px; top: 11px"}
               =render partial: 'ref_buttons', locals: {reference: r.ref, audio_div_style: "top: 32px; left: 2px; position: absolute; z-index: 1;"}
-            .embedded_reader{style: "font-weight: normal; margin-top: 10px; padding-left: 6px; padding-bottom: 5px; margin-right: 25px; font-size: 14px; line-height: 25px"}= r.ref.contents(format: 'html').join.html_safe
+            .embedded_reader{"data-setting-font" => @font, 'data-setting-size' => @size, style: "font-weight: normal; margin-top: 10px; padding-left: 6px; padding-bottom: 5px; margin-right: 25px; font-size: 14px; line-height: 25px"}= r.ref.contents(format: 'html').join.html_safe
             -if r.ref.contents(format: 'html').count > 6
               %div{style: "margin-right: 30px; min-height: 45px"}
                 = render partial: 'reading_completed_button', locals: {plan: @subscription, cur_reading_index: @content_page, reading: @reading, day: @day}
