--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -1,21 +1,8 @@
 - @title = "#{@reference.ref_string} #{@version.osis_human}"
 - @reader_menus = true
 
-#reader_header
-  %header
-    %ul.float_left
-      %li
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_book_chapter', :title => t("ref.choose book and chapter")}
-          %b
-            = @reference.ref_string
-          %span
-            = t('ref.choose book and chapter')
-      %li.separator
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_version', :title => t("ref.choose version")}
-          %b
-            = @version.osis_human
-          %span
-            =t("ref.choose version")
+= render partial: 'reader_header'
+
 %article
   %div{style:"text-align: center; margin-top:70px"}
     %h1= t("ref.invalid chapter title")
