--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -9,56 +9,7 @@
   = render '/shared/widget_ad_bible_app'
   = render partial: '/shared/widget_parallel_notes', locals: {hide_widget: true}
 
-#reader_header
-  %header
-    %ul.float_left
-      %li
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_book_chapter', :title => t("ref.choose book and chapter")}
-          %b
-            = @reference.ref_string
-          %span
-            = t('ref.choose book and chapter')
-      %li
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_version', :title => t("ref.choose version")}
-          %b
-            = @reference.version_string
-          %span
-            =t("ref.choose version")
-      %li#li_selected_verses.separator.hide
-        %a#clear_selected_verses.button{:href => '#', :title => 'Clear Selected Verses'}
-          %span.icon_x
-            Clear Selected Verses
-        %a#verses_selected_button.dynamic_menu_trigger.button{:href => '#menu_bookmark', :title => t("ref.share")}
-          %b.icon_share
-            =t("ref.selected")
-            %sup#verses_selected_count
-              0
-        -# Submit via GET to share verses...
-        %form{action: '', id: 'verses_selected_form', method: 'get'}
-          %input.verses_selected_input{name:'verses', type: 'hidden', value: ''}
-    %ul.float_right
-      %li.show_in_parallel_mode
-        %a.dynamic_menu_trigger.drop_down_select{:href => '#menu_alt_version', :title => t("ref.choose second version")}
-          %b
-            = @alt_reference.version_string
-          %span
-            =t("ref.choose version")
-      %li.hide_in_parallel_mode
-        %a.button.dynamic_menu_trigger{:href => '#menu_settings', :title => t("ref.settings")}
-          %span.icon_settings
-            =t("ref.settings")
-      %li.hide_in_parallel_mode
-        %a.button{:href => @reference.audio ? '#menu_audio_player' : nil, :title => @reference.audio ? t("ref.listen"): t('audio.none'), class: @reference.audio ? "dynamic_menu_trigger" : "disabled"}
-          %span.icon_listen{class: @reference.audio ? nil : "disabled"}
-            =t("ref.listen")
-      %li.hide_in_parallel_mode
-        %a.button#button_full_screen{:href => '#', :title => t("ref.full screen")}
-          %span.icon_full_screen
-            =t("ref.full screen")
-      %li.float_right_in_parallel_mode
-        %a#button_read_parallel.button{:href => '#', :title => t("ref.parallel")}
-          %span.icon_parallel
-            =t("ref.parallel")
+= render partial: 'reader_header'
 
 %article{"data-setting-font" => @font, 'data-setting-size' => @size, "data-selected-verses" => "[#{@verses}]", "data-verse-modal-enabled" => "#{!@single_verse.nil?}", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   = link_to(@reference.previous, bible_path(@reference.previous), class: "nav_prev") if @reference.previous
