--- a/app/cells/version_selector/_item.haml
+++ b/app/cells/version_selector/_item.haml
@@ -1,7 +1,10 @@
 - alt ||= nil
+- href = "#"
+- href = (@reference ? bible_path(@reference.merge(version: version.osis)) : url_for(@params.merge(version: version.osis))) if alt
+
 %tr
   %th
-    %a.spinner_trigger{class: alt ? "alt_version_link" : "", "data-version" => version.osis, :href => @reference ? bible_path(@reference.merge(version: version.osis)) : url_for(@params.merge(version: version.osis))}= version.osis_human
+    %a{class: alt ? "spinner_trigger alt_version_link" : "spinner_trigger", "data-version" => version.osis, :href => href}= version.osis_human
   %td{class: version.audio? ? "audio" : ""}
-    %a.spinner_trigger{class: alt ? "alt_version_link" : "", "data-version" => version.osis, :href => @reference ? bible_path(@reference.merge(version: version.osis)) : url_for(@params.merge(version: version.osis))}
+    %a{class: alt ? "spinner_trigger alt_version_link" : "spinner_trigger", "data-version" => version.osis, :href => href}
       %div= version.title
