kick peopel out of FS and parallel mode when get 'chapter' doesn't exist view. Also, fix div on that view to be 0 height so there's not an invisible clickable areas.

--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -7,7 +7,7 @@
   %div{style:"text-align: center; margin-top:70px"}
     %h1= t("ref.invalid chapter title")
     %p= t("ref.invalid chapter text")
-    %div.dynamic_menu_trigger.no_style{:href=> '#menu_book_chapter', style: "margin-left:68px"}
+    %div.dynamic_menu_trigger.no_style{:href=> '#menu_book_chapter', style: "height: 0; margin-left:68px"}
       %button{style: "margin-left:-68px"}= t("ref.select another chapter")
 
 %footer
